# sko-media-monitor

./: .env.example  .gitignore  Makefile  README_RU.md  instagram-login.command  pyproject.toml  setup.command  test.command
.github/workflows/: historical-search.yml  keep-schedules-active.yml  monitor-main.yml  monitor-negative.yml
apps-script/: .clasp.json.example  Code.gs  SourceRegistry.gs  appsscript.json
config/: sources.json
docs/: ARCHITECTURE_RU.md  INSTALL_RU.md
src/sko_monitor/: __init__.py  cli.py  config.py  dedupe.py  exporter.py  historical.py  instagram_auth.py  models.py  pipeline.py  state.py
src/sko_monitor/analyzers/: __init__.py  analyzer.py  media.py  rules.py  semantic.py
src/sko_monitor/collectors/: __init__.py  base.py  instagram.py  parsing.py  social.py  telegram.py  website.py  youtube.py
src/sko_monitor/delivery/: __init__.py  sheets.py  telegram.py
tests/: apps_script_core.test.mjs  source_registry_test.py
tests/python/: test_analyzer.py  test_collectors.py  test_config.py  test_dedupe.py  test_delivery.py  test_historical.py  test_instagram_auth.py  test_pipeline_delivery.py  test_state.py
tools/: build_apps_script_registry.py  build_source_registry.py
