[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sko-media-monitor"
version = "0.1.0"
description = "Free, layered media monitoring for North Kazakhstan Region"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.27,<1",
  "openpyxl>=3.1,<4",
  "pydantic>=2.7,<3",
  "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
instagram = ["instaloader>=4.13,<5"]
semantic = ["sentence-transformers>=3.0,<6"]
media = ["pytesseract>=0.3.13,<1", "Pillow>=10,<13"]
video = ["faster-whisper>=1.1,<2", "yt-dlp>=2025.1.1"]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "python-docx>=1.1,<2",
  "respx>=0.22,<1",
  "ruff>=0.9,<1",
]
all = [
  "instaloader>=4.13,<5",
  "sentence-transformers>=3.0,<6",
  "pytesseract>=0.3.13,<1",
  "Pillow>=10,<13",
  "faster-whisper>=1.1,<2",
  "yt-dlp>=2025.1.1",
]

[project.scripts]
sko-monitor = "sko_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
